--- a/style.css
+++ b/style.css
@@ -49,3 +49,7 @@ p.purple a.big:hover {
   background-color: purple;
   font-size: 50px;
 }
+
+div article:not(:first-child) {
+  background-color: fuchsia;
+}
