changed color for 11th example, from fucsia to coral

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ p.purple a.big:hover {
 }
 
 div article:not(:first-child) {
-  background-color: fuchsia;
+  background-color:coral;
 }
 
 p.black-white b em {
